prevents home search from overlapping hamburger nav

--- a/datausa/assets/scss/elements/_home.scss
+++ b/datausa/assets/scss/elements/_home.scss
@@ -149,7 +149,7 @@ body.home {
     position: relative;
     max-width: 650px;
     width: 100%;
-    z-index: 10;
+    z-index: 5;
   }
 
   #search-home {
